복습해야할 것들...............ㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠ

--- a/helloWeb/src/main/webapp/js/object.html
+++ b/helloWeb/src/main/webapp/js/object.html
@@ -15,7 +15,10 @@
 	<script src ="object1.js"></script>
 	<script src ="object2.js"></script>
 	-->
-	<script src ="object4.js"></script>
+	
+	<!-- <script src ="friend.js"></script>
+	// <script src ="module.js"></script> -->
+	<script type="module" src ="module.js"></script> // 노출하는거 싫어서 내부에서만 쓰려고 export import 이런거 써서 관리한디
 	
 </body>
 
