--- a/helloWeb/src/main/webapp/js/ajax.html
+++ b/helloWeb/src/main/webapp/js/ajax.html
@@ -7,7 +7,52 @@
 </head>
 
 <body>
+	<table border ="1">
+	<tr>
+		<th>아이디</th><td><input id="mid"></td>
+	</tr>
+	<tr>
+		<th>비밀번호</th><td><input id="pass"></td>
+	</tr>
+	<tr>	
+		<th>이름</th><td><input id="name"></td>
+	</tr>
+	<tr>	
+		<th>연락처</th><td><input id="phone"></td>
+	</tr>
+	<tr>
+		<!-- <td colspan="2"><button id="addBtn" onclick="addMember()">등록</button></td> -->
+		<td colspan="2">
+			<button id="addBtn" onclick="addMember()">등록</button>
+			<button id="modBtn" onclick="modifyMember()">수정</button>
+		</td>
+	</tr>
+	</table>
+	
+	<hr>
+	
 	<div id="show"></div>
+	
+	<script>
+		function showInfo(e, obj){
+		console.log("이벤트", e.target.ParentElement); // e.target : td => parentElement 상위요소 :tr
+		console.log(obj); // this: tr;
+		//tr하위:아이디,비번,이름,연락처가 필요함.
+		console.log(obj.children); //tr의 하위요소 : td -> 배열로 뜸. console : LCollection(4) [td, td, td, td] 
+		let mid = obj.children[0].innerHTML;
+		let pass = obj.children[1].innerHTML;
+		let name = obj.children[2].innerHTML;
+		let phone = obj.children[3].innerHTML;
+		
+		document.getElementById('mid').value = mid; // value : input태그일 경우에만! (*value != innerHTML)
+		document.getElementById('pass').value = pass;
+		document.getElementById('name').value = name;
+		document.getElementById('phone').value = phone;
+		} 
+		
+	</script>
+	
+	<script type = "module" src="ajax2.js"></script>
 	<script type = "module" src="ajax.js"></script>
 	
 </body>
