--- a/helloWeb/src/main/webapp/js/daumapi.html
+++ b/helloWeb/src/main/webapp/js/daumapi.html
@@ -1,50 +1,54 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-	<meta charset="UTF-8">
-	<title>daumapi.html</title>
+    <meta charset="utf-8">
+    <title>마커에 인포윈도우 표시하기</title>
+    
 </head>
-
 <body>
-	<!DOCTYPE html>
-	<html>
+<div id="map" style="width:100%;height:350px;"></div>
 
-	<head>
-		<meta charset="utf-8">
-		<title>지도 생성하기</title>
+<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=1aa721af87396214c94a6f35d333446a"></script>
+<script>
 
-	</head>
+//넣은 코드 ~ let lng 그리고 밑에 위도경도에 lat lng값 넣어줬음.
+let href=location.href;
+console.log('주소값 나옴:', href)
+let xpos = href.indexOf('?x=') + 3; 
+let ypos = href.indexOf('&y=') + 3;
+let lat = href.substring(xpos, ypos-3);
+let lng = href.substring(ypos);
 
-	<body>
-		<!-- 지도를 표시할 div 입니다 -->
-		<div id="map" style="width:100%;height:900px;"></div>
+var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
+    mapOption = { 
+        center: new kakao.maps.LatLng(lat, lng), // 지도의 중심좌표
+        level: 3 // 지도의 확대 레벨
+    };
 
-		<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=1aa721af87396214c94a6f35d333446a"></script>
-		<script>
-			let href=location.href;
-			console.log('주소값 나옴:', href)
-			let xpos = href.indexOf('?x=') + 3; 
-			let ypos = href.indexOf('&y=') + 3;
-			let lat = href.substring(xpos, ypos-3);
-			let lng = href.substring(ypos);
-			
-			console.log(xpos, ypos, lat);
-			
-			
-			var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
-				mapOption = {
-					center: new kakao.maps.LatLng(lat, lng), // 지도의 중심좌표-도경도값.
-					level: 1 // 지도의 확대 레벨
-				};
+var map = new kakao.maps.Map(mapContainer, mapOption);
 
-			// 지도를 표시할 div와  지도 옵션으로  지도를 생성합니다
-			var map = new kakao.maps.Map(mapContainer, mapOption); 
-		</script>
-	</body>
+// 마커가 표시될 위치입니다 
+var markerPosition  = new kakao.maps.LatLng(lat, lng); 
 
+// 마커를 생성합니다
+var marker = new kakao.maps.Marker({
+    position: markerPosition
+});
 
-	</html>
+// 마커가 지도 위에 표시되도록 설정합니다
+marker.setMap(map);
+
+var iwContent = '<div style="padding:5px;">Hello World! <br><a href="https://map.kakao.com/link/map/Hello World!,33.450701,126.570667" style="color:blue" target="_blank">큰지도보기</a> <a href="https://map.kakao.com/link/to/Hello World!,33.450701,126.570667" style="color:blue" target="_blank">길찾기</a></div>', // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
+    iwPosition = new kakao.maps.LatLng(lat, lng); //인포윈도우 표시 위치입니다
+
+// 인포윈도우를 생성합니다
+var infowindow = new kakao.maps.InfoWindow({
+    position : iwPosition, 
+    content : iwContent 
+});
+  
+// 마커 위에 인포윈도우를 표시합니다. 두번째 파라미터인 marker를 넣어주지 않으면 지도 위에 표시됩니다
+infowindow.open(map, marker); 
+</script>
 </body>
-
 </html>
