--- a/helloWeb/src/main/webapp/js/dom.html
+++ b/helloWeb/src/main/webapp/js/dom.html
@@ -4,6 +4,35 @@
 <head>
 	<meta charset="UTF-8">
 	<title>js/dom.html</title>
+	<style>
+		.center {
+			text-align: center;
+		}
+
+		.pagination {
+			display: inline-block;
+		}
+
+		.pagination a {
+			color: black;
+			float: left;
+			padding: 8px 16px;
+			text-decoration: none;
+			transition: background-color .3s;
+			border: 1px solid #ddd;
+			margin: 0 4px;
+		}
+
+		.pagination a.active {
+			background-color: #4CAF50;
+			color: white;
+			border: 1px solid #4CAF50;
+		}
+
+		.pagination a:hover:not(.active) {
+			background-color: #ddd;
+		}
+	</style>
 </head>
 
 <body>
@@ -11,8 +40,11 @@
 	<select id="sidoList">
 		<option>선택하세요</option>
 	</select>
-	
+
 	<div id="show"></div>
+	<div id="center"></div>
+	<div class="pagination"></div>
+
 	<script type="module" src="dom3.js"></script> <!-- import하면 type= "module" 해줘야한다! !!! script에!! -->
 </body>
 
