1103오전 ~1교시커밋.

--- a/helloJSP/src/main/webapp/student/studentInfo.html
+++ b/helloJSP/src/main/webapp/student/studentInfo.html
@@ -38,7 +38,7 @@
 				</tr>
 				<tr>
 					<th>생년월일</th>
-					<td><input type="date" id="sbtd" name="studentBirthday" value="1994-03-14"><br></td>
+					<td><input type="date" id="sbirth" name="studentBirthday" value="1994-03-14"><br></td>
 				</tr>
 				<tr>
 					<th>등록</th>
@@ -94,7 +94,7 @@
 
 		</div>
 		
-		<script src="../js/student.js"></script>
+		<script type="module" src="../js/student.js"></script>
 </body>
 
 </html>
